--- a/notes/templates/notes_detail.html
+++ b/notes/templates/notes_detail.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <div class="border round">
+    <h1 class="my-5">{{ note.title }}</h1>
+    <p>{{ note.content }}</p>
+    </div>
+{% endblock %}
