--- a/notes/templates/notes_list.html
+++ b/notes/templates/notes_list.html
@@ -1,10 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>These are the notes:</h1>
-    <ul>
+    <h1 class="my-5">These are the notes:</h1>
+    <div class="row row-cols3 g-2">
         {% for note in notes %}
-            <li>{{ note.title }}</li>
+        <div class="col">
+            <div class="p-3 border">
+                <a href="{% url 'notes.detail' pk=note.id %}" class="test-dark text-decoration-none"><h3>{{ note.title }}</h3></a>
+                {{ note.content|truncatechars:10 }}
+            </div>
+        </div>
+    </div>
         {% endfor %}
-    </ul>
 {% endblock %}
