--- a/templates/home/welcome.html
+++ b/templates/home/welcome.html
@@ -1,14 +1,8 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SmartNotes!</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <h1>Welcome to SmartNotes</h1>
     <p>Today is {{ today }} </p>
-</body>
-</html>
+    <a href="{% url 'notes.list' %}" class="btn btn-primary">Checkout these smart notes!</a>
+{% endblock %}
+
