--- a/notes/templates/notes_form.html
+++ b/notes/templates/notes_form.html
@@ -2,11 +2,13 @@
 
 {% block content %}
 
-    <form action="{% url 'notes.new' %}" method="post">
+    <form method="post">
             {% csrf_token %}
 {#        <input type="text" name="title" placeholder="Title">#}
 {#        <textarea name="content" placeholder="Content"></textarea>#}
 
         <button type="submit" class="btn btn-primary my-5">Save</button>
     </form>
+    <a href="{% url 'notes.list' %}" class = "btn btn-secondary">Cancel</a>
+    <a href="{% url 'notes.update' pk=note.id %}" class = "btn btn-secondary">Edit</a>
 {% endblock %}
