--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -12,6 +12,18 @@
 {#    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">#}
 </head>
 <body>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="ms-auto">
+            {% if user.is_authenticated %}
+                <a href="{% url 'notes.list' %}" class="btn btn-outline-light">Home</a>
+                <a href="{% url 'notes.new' %}" class="btn btn-outline-light">Create</a>
+                <a href="{% url 'logout' %}" class="btn btn-outline-light">Logout</a>
+            {% else %}
+                <a href="{% url 'login' %}" class="btn btn-outline-light">Login</a>
+                <a href="{% url 'signup' %}" class="btn btn-outline-light">Sign Up</a>
+            {% endif %}
+        </div>
+    </nav>
 <div class=" my-5 text-center container">
     {% block content %}
     {% endblock %}
